k8s/client-deployment.yaml
# Specify a scope of objects we can create:
# v1: componentStatus, configMap, Endpoints, Event, Namespace, Pod etc.
# apps/v1: ControllerRevision, StatefulSet, Development
apiVersion: apps/v1
# There are several types of created objects: StatefulSet, ReplicaController, Pod - running one container or more, Service - setting up networking, Deployment - maintains a set of identical pods, ensuring that they have the correct config and that the right number exists.
kind: Deployment
metadata:
  name: client-deployment
spec:
  # Namber of identical pods to make:
  replicas: 3
  # We use selector, because we reaching to the kube api and ask master to create a Pod object
  selector:
    matchLabels:
      # That's how client-pod is linked to the client-node-port. The key/value can be anything: key: value
      component: web
  # All the created Pods need to be of the exact format (identical):
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: yauhenisheima/multi-client
          ports:
          # complex > client > nginx > default.conf > listen 3000
            - containerPort: 3000
